# what2wear

./: .gitignore  pyproject.toml
tests/: test_holidays.py
what2wear/: holidays.py  what2wear.py
